# lean-explore

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  manifest.json  openapi.yaml  pyproject.toml
.github/workflows/: linter.yml
dev_tools/population/: phase1_tasks.py  phase3_tasks.py
docs/: README.md  api-client.md  cli.md  configuration.md  data-models.md  extraction-pipeline.md  getting-started.md  local-backend.md  mcp-server.md
lean/: LeanExtract.lean  lake-manifest.json  lakefile.lean
lean/.lake/: lakefile.olean  lakefile.olean.trace
lean/cslib/: CslibExtract.lean  lake-manifest.json  lakefile.lean
lean/docbuild/: lake-manifest.json  lakefile.toml
lean/flt/: FLTExtract.lean  lake-manifest.json  lakefile.lean
lean/formal-conjectures/: lake-manifest.json  lakefile.lean
lean/mathlib/: lake-manifest.json  lakefile.lean
lean/physlean/: PhysExtract.lean  lake-manifest.json  lakefile.lean
lean_project/.lake/: lakefile.olean  lakefile.olean.trace
scripts/: generate_docs_data.py  lean_to_english.py  populate_db.py  test_extraction_runner.py
src/lean_explore/: config.py
src/lean_explore/api/: __init__.py  client.py  models.py
src/lean_explore/cli/: __init__.py  data_commands.py  display.py  main.py
src/lean_explore/extract/: __main__.py  doc_gen4.py  doc_parser.py  embeddings.py  github.py  index.py  informalize.py  models.py  package_config.py  package_registry.py  package_utils.py  pagerank.py  prompt.txt  schemas.py  types.py
src/lean_explore/mcp/: __init__.py  app.py  server.py  tools.py
src/lean_explore/models/: __init__.py  informal_db.py  search_db.py  search_types.py
src/lean_explore/search/: __init__.py  engine.py  service.py  types.py
src/lean_explore/util/: __init__.py  embedding_client.py  logging.py  openrouter.py  openrouter_client.py  paths.py  remote_embedding_client.py  reranker_client.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  client_test.py
tests/cli/: data_commands_test.py  display_test.py  main_test.py
tests/extract/: __init__.py  __main___test.py  doc_gen4_test.py  doc_parser_test.py  embeddings_test.py  index_test.py  informalize_test.py  pagerank_test.py
tests/mcp/: __init__.py  app_test.py  server_test.py  tools_test.py
tests/models/: search_db_test.py  search_types_test.py
tests/search/: engine_test.py  service_test.py
tests/util/: embedding_client_test.py  openrouter_client_test.py  reranker_client_test.py
